--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
       "clean-webpack-plugin": "^3.0.0",
       "webpack": "^5.17.0",
+      "webpack-cli": "^4.9.1",
       "ts-loader": "^8.0.14"
   },
   "dependencies": {
