--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
         "outDir": "./dist/",
         "noImplicitAny": true,
         "module": "es6",
-        "target": "es6",
+        "target": "es2020",
+        "allowJs": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
         "moduleResolution": "node",
         "esModuleInterop": true
     },
-    "include": ["src/*.ts"],
+    "include": ["src/**/*.ts"],
     "exclude": []
 }
