--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:web": "npm run clean && webpack --env buildEnv=dev",
     "build:web:dev": "npm run clean && webpack --env buildEnv=dev",
     "build:web:prod": "npm run clean && webpack --env buildEnv=prod",
-    "clean": "echo clean",
+    "clean": "rm -rf dist",
     "docs": "typedoc",
     "docs:buildAndUpload": "npm run clean && typedoc && node ./utilities/uploadDocsToS3AndInvalidate.js",
     "publishNewRelease": "npm run clean && npm run docs:buildAndUpload && npm run build:node && npm publish && npm run build:web:prod"
@@ -27,13 +27,14 @@
   "license": "MIT",
   "homepage": "https://highfidelity.com/",
   "devDependencies": {
-      "clean-webpack-plugin": "^3.0.0",
-      "webpack": "^5.17.0",
-      "webpack-cli": "^4.9.1",
-      "ts-loader": "^8.0.14"
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "ts-loader": "^8.0.14",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-      "agora-rtc-sdk-ng": "^4.11.0"
+    "agora-rtc-sdk-ng": "^4.11.0"
   },
   "keywords": [
     "audio",
