--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "module": "es2015",
         "target": "ES2017",
         "allowJs": true,
-        "removeComments": true,
+        "checkJs": false,
+        "removeComments": false,
         "preserveConstEnums": true,
         "sourceMap": true,
         "moduleResolution": "node",
