--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "copy-webpack-plugin": "^10.2.4",
         "ts-loader": "^9.3.0",
+        "web-audio-peak-meter": "^2.1.0",
         "webpack": "^5.72.0",
         "webpack-cli": "^4.9.2"
     },
