--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-    "name": "hifi-web-audio",
+    "name": "audio-room",
     "version": "1.0.0-0",
     "description": "",
     "main": "./dist/hifi-audio.js",
-    "types": "./dist/hifi-audio.d.ts",
     "files": [
         "dist"
     ],
     "private": false,
     "devDependencies": {
-        "copy-webpack-plugin": "^10.2.4",
-        "ts-loader": "^9.3.0",
-        "typedoc": "^0.23.16",
-        "web-audio-peak-meter": "^2.1.0",
-        "webpack": "^5.72.0",
-        "webpack-cli": "^4.9.2"
+        "copy-webpack-plugin": "^11.0.0",
+        "hifi-web-audio": "^1.0.1-0",
+        "ts-loader": "^9.4.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^4.10.0"
     },
     "dependencies": {
-        "agora-rtc-sdk-ng": "^4.12.2"
+        "agora-rtc-sdk-ng": "^4.15.0"
     }
 }
