--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "webpack-cli": "^4.10.0"
     },
     "dependencies": {
-        "agora-rtc-sdk-ng": "^4.15.0"
+        "agora-rtc-sdk-ng": "^4.15.0",
+        "async-mutex": "^0.4.0"
     }
 }
