fix agora include

--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     ],
     "private": false,
     "devDependencies": {
+        "agora-rtc-sdk-ng": "^4.15.1",
         "copy-webpack-plugin": "^11.0.0",
         "hifi-web-audio": "file:../hifi-web-audio-large",
         "ts-loader": "^9.4.2",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
-    },
-    "dependencies": {
-        "agora-rtc-sdk-ng": "^4.15.1"
     }
 }
