--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
         "dist"
     ],
     "private": false,
+    "dependencies": {
+        "@daily-co/daily-js": "^0.36.1"
+    },
     "devDependencies": {
         "agora-rtc-sdk-ng": "^4.15.1",
         "copy-webpack-plugin": "^11.0.0",
-        "hifi-web-audio": "file:../hifi-web-audio-large",
+        "hifi-web-audio": "^1.0.1-0",
         "ts-loader": "^9.4.2",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
