--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "@daily-co/daily-js": "^0.36.1"
     },
     "devDependencies": {
-        "agora-rtc-sdk-ng": "^4.15.1",
+        "agora-rtc-sdk-ng": "^4.16.0",
         "copy-webpack-plugin": "^11.0.0",
-        "hifi-web-audio": "^1.0.1-0",
+        "hifi-web-audio": "file:../hifi-web-audio-api",
         "ts-loader": "^9.4.2",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
