--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "devDependencies": {
         "agora-rtc-sdk-ng": "^4.16.0",
         "copy-webpack-plugin": "^11.0.0",
-        "hifi-web-audio": "file:../hifi-web-audio-api",
+        "hifi-web-audio": "file:hifi-web-audio-api",
         "ts-loader": "^9.4.2",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
