--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "private": false,
     "scripts": {
         "install-audio-api": "npm install hifi-web-audio@latest --registry https://npm.highfidelity.com/ --no-save",
-        "install-audio-api-local": "npm install file:../hifi-web-audio-api --no-save",
-        "app": "rimraf ./dist && webpack --env buildEnv=prod"
+        "install-local-audio-api": "npm install file:../hifi-web-audio-api --no-save",
+        "build-app": "rimraf ./dist && webpack --mode production",
+        "watch-app": "rimraf ./dist && webpack --mode development --watch --progress",
     },
     "dependencies": {
         "@daily-co/daily-js": "^0.36.1",
