--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     },
     "dependencies": {
         "@daily-co/daily-js": "^0.36.1",
-        "agora-rtc-sdk-ng": "^4.16.0"
+        "agora-rtc-sdk-ng": "^4.16.0",
+        "hifi-web-audio": "latest"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^11.0.0",
