--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "install-audio-api": "npm install hifi-web-audio@latest --registry https://npm.highfidelity.com/ --no-save",
         "install-local-audio-api": "npm install file:../hifi-web-audio-api --no-save",
         "build": "rimraf ./dist && webpack --mode production",
-        "watch": "rimraf ./dist && webpack --mode development --watch --progress"
+        "watch": "rimraf ./dist && webpack --mode development --watch --progress",
+        "serve": "rimraf ./dist && webpack serve --open --mode development"
     },
     "dependencies": {
         "@daily-co/daily-js": "^0.36.1",
@@ -23,6 +24,7 @@
         "rimraf": "^4.4.0",
         "ts-loader": "^9.4.2",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.13.1"
     }
 }
